--- a/test-app/index.html
+++ b/test-app/index.html
@@ -10,7 +10,10 @@
         <h1>Temperature analyzer</h1>
         <img src="img/cloud_clipart_png_34.png" />
         <h4>Enter temperature:</h4>
-        <input type="text" class="input">
+        <div class="wrapper">
+            <input type="text" class="input">
+            <button class="button">Get result</button>
+        </div>
         <h4>Result:</h4>
     <div class="out">Super cold day!</div>
     </div>
