--- a/test-app/index.html
+++ b/test-app/index.html
@@ -15,7 +15,7 @@
             <button class="button">Get result</button>
         </div>
         <h4>Result:</h4>
-    <div class="out">Super cold day!</div>
+    <div class="out"></div>
     </div>
 <script src="main.js"></script>
 </body>
